# bmo-agent-setup

./: .gitignore  AGENT_WRITING_GUIDELINES.md  CONFIG.md  Cargo.toml  LICENSE  NOTICE  README.md  bmo-config.default.toml  bmo-config.hardened.toml  bmo-config.minimal.toml  bmo-config.secure.toml  bmo-config.toml  bmo-config.yolo-mode.toml  feedback.md  justfile  package.json
.github/workflows/: ci.yaml
agents/: code-quality.md  distributed-systems-engineer.md  distributed-systems-expert.md  documentation-writer.md  project-manager.md  qa-engineer.md  security-preflight.md  senior-engineer.md  staff-engineer.md  ux-designer.md
docs/: pi-extension.md
pi-extension/: agents.ts  index.ts  package.json  subagent.ts
pi-extension/agents/: code-quality.md  distributed-systems-expert.md  documentation-writer.md  project-manager.md  qa-engineer.md  senior-engineer.md  staff-engineer.md  ux-designer.md
pi-extension/skills/dev-team/: SKILL.md
pi-extension/skills/documentation-driver/: SKILL.md
pi-extension/skills/pi-bmo-code-quality/: SKILL.md
pi-extension/skills/pi-bmo-dev-team/: SKILL.md
pi-extension/skills/pi-bmo-distributed-systems-expert/: SKILL.md
pi-extension/skills/pi-bmo-documentation-driver/: SKILL.md
skills/dev-init/: SKILL.md
skills/dev-team/: SKILL.md
skills/documentation-driver/: SKILL.md
skills/tlaplus-from-souce/: SKILL.md
src/: claude_code.rs  config.rs  lib.rs  main.rs
