[package]
edition = "2021"
name = "bmo-agent-setup"
version = "0.1.0"

[[bin]]
name = "bmo-agent-setup"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
toml = "0.9.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
